# BigData2025FinalProject

./: .gitignore  README.md  configs.cfg  main.py  pyproject.toml  requirements.txt
cluster/: Dockerfile  docker-compose.yaml
cluster/configs/: hbase-site.xml  hdfs-site.xml
cluster/scripts/: hadoop-env.sh  hbase-env.sh  yarn-env.sh
src/: __init__.py  api.py  db.py  hadoop.py  models.py  utils.py
web/: app.js  index.html  styles.css
